--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/jarnokiimala2.png" alt="Jarno Kiimala">
+                    <img src="img/jarnokiimala1.png" alt="Jarno Kiimala">
                 </div>
             </div>
             <div class="right-header">
@@ -261,7 +261,7 @@
                     </div>
                     <p class="tl-duration">2023 - 2024</p>
                     <h5>Software Developer<span> - Esedu</span></h5>
-                    <img src="img/esedu.png" alt="Esedu">
+                    <img src="img/esedu.png" alt="Esedu - Jarno Kiimala - Ohjelmistokehittäjä">
                     <p>
                         HTML5, CSS3, Bootstrap 5, JavaScript, Canvas API, Visual Studio Code, Git/GitHub, AI
                     </p>
@@ -273,7 +273,7 @@
                     </div>
                     <p class="tl-duration">2023</p>
                     <h5>Python Coding<span> - Uni Helsinki</span></h5>
-                    <img src="img/unihki.png" alt="University of Helsinki">
+                    <img src="img/unihki.png" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
                         Introduction to Programming course | Advanced Course
                         in Programming | The Department of Computer Science
@@ -298,7 +298,7 @@
                     </div>
                     <p class="tl-duration">2021</p>
                     <h5>My Cashflow e-Commerce Web Design & Administration<span> - Faktia Ltd</span></h5>
-                    <img src="img/faktia.png" alt="Faktia Ltd">
+                    <img src="img/faktia.png" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
                     <p>
                         MyCashflow e-Commerce Web Design, SEO and Administration
                     </p>
@@ -309,7 +309,7 @@
                     </div>
                     <p class="tl-duration">2018</p>
                     <h5>3D Modeling Online Course<span> - The Finnish Institute for Enterprise Management</span></h5>
-                    <img src="img/syo.png" alt="The Finnish Institute for Enterprise Management">
+                    <img src="img/syo.png" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks">
                     <p>
                         Design & Product Development | 3D models and 2D drawings of complex parts and assemblies
                         utilizing SolidWorks & Autodesk Inventor Pro
@@ -322,7 +322,7 @@
                     </div>
                     <p class="tl-duration">2017</p>
                     <h5>Further Technical Education to Highly Qualified<span> - Lappia-Education Ltd</span></h5>
-                    <img src="img/lappia.png" alt="Lappia-Education Ltd">
+                    <img src="img/lappia.png" alt="Lappia-Education Ltd - Jarno Kiimala - Further Technical Education to Highly Qualified">
                     <p>
                         Continuing professional technical education to highly qualified individuals tailored
                         to meet the needs of the Swedish and Norwegian labor markets
@@ -335,7 +335,7 @@
                     </div>
                     <p class="tl-duration">2013 - 2017</p>
                     <h5>Industrial Management Engineer<span> - Lapland University of Applied Sciences</span></h5>
-                    <img src="img/lapinamk.png" alt="Lapland University of Applied Sciences">
+                    <img src="img/lapinamk.png" alt="Lapland University of Applied Sciences - Jarno Kiimala - Industrial Management - Tuotantotalous">
                     <p>
                         Bachelor of Engineering (B.Eng). Subject of thesis: Marketing Research of Steel Abrasive Blast
                         Room and Powder Coat Booth commissioned by Tornion KaMa-Palvelut Oy
@@ -615,7 +615,7 @@
                         <img src="img/port2.png" alt="Jarno Kiimala - Thesis">
                     </div>
                     <div class="hover-items">
-                        <h3>My B.Eng Thesis</h3>
+                        <h3>B.Eng Thesis</h3>
                         <div class="icons">
                             <a href="https://www.theseus.fi/handle/10024/134259" target="_blank" class="icon">
                                 <i class="fab fa-google"></i>
