--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/jarnokiimala3.png" alt="Jarno Kiimala">
+                    <img src="img/jarnokiimala4.png" alt="Jarno Kiimala - Software Developer">
                 </div>
             </div>
             <div class="right-header">
