--- a/index.html
+++ b/index.html
@@ -64,13 +64,17 @@
                 <div class="left-about">
                     <h4>About me</h4>
                     <p>
-                    I am a Front-End Web Developer and an Industrial Management Engineer with 10+ years of experience
+                    Creative Front-End Web Developer and an Industrial Management Engineer with 10+ years of experience
                     in cross-functional remote projects e.g. (e-commerce, productization, marketing research, networking, web design/development)
                     with operational efficiency, sustainability and corporate responsibility in mind.
                     <p>
-                    I have a strong foundation in Adobe CC Software and Graphic Design
-                    and I am a self-taught After Effects 2D animator.
-                    My recent accomplishments are Python coding, JavaScript, Bootstrap 5 and CSS3.</p>
+                    I am committed to continuous improvement principals and strive for quality and customer satisfaction.
+                    Creating meaningful products and services attracts more customers and increases profits and long-term success. 
+                    I am experienced in carrying out international projects in multiprofessional environment. 
+                    I have worked in The United States, The Netherlands, Norway, Sweden & Finland in different business 
+                    fields and I follow the zero tolerance policy for job safety. I am prepared for an open minded and responsible 
+                    leadership role and I believe in continuous lifelong learning.<p>
+                    My recent accomplishments are Python coding, JavaScript, Bootstrap 5 and Knowledge Management.</p></p>
                     
                     <!--
                     <div class="btn-con">
