--- a/index.html
+++ b/index.html
@@ -958,8 +958,7 @@
                     <div class="left-contact">
                         <h4>Get Connected!</h4>
                         <p>
-                            <p style="color:var(--color-secondary)">• OPEN TO WORK •</p> Send me a connection 
-                            request on LinkedIn or email
+                            <p style="color:var(--color-secondary)">• OPEN TO WORK •</p> Scan the QR Code next to my contact info and send me an email
                             so we can start collaborating.
                             I am willing to relocate.
                             Hope to hear from you soon! References available upon request.<br>
@@ -1026,6 +1025,10 @@
                     </div>
                     
                     <div class="right-contact">
+
+                        <div class="image">
+                            <img src="img/scanqr.png" alt="Jarno Kiimala - Software Developer">
+                        </div>
                         
                         <!--
                         <form action="" class="contact-form">
