--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         </section>
         <section class="container" id="portfolio">
             <div class="main-title">
-                <h2>My <span>Projects</span><span class="bg-text"></span></h2>
+                <h2><i class="fa-solid fa-code"></i> <span>Projects</span><span class="bg-text"></span></h2>
             </div>
             <p class="port-text">
                 Use Google Chrome for best user experience.
