--- a/index.html
+++ b/index.html
@@ -92,26 +92,34 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">Dozens of</p>
-                            <p class="small-text">Remote Projects</p>
+                            <p class="large-text">Dozens of</p><br>
+                            <p class="small-text">Remote Projects </p><br>
+                            <p class="small-text">International Teams </p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">10+</p>
-                            <p class="small-text">Years of experience</p>
+                            <p class="large-text">10+</p><br>
+                            <p class="small-text">Years of experience </p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">Attention</p>
-                            <p class="small-text">To Detail</p>
+                            <p class="large-text">Highlight</p><br>
+                            <p class="small-text">Sustainability </p><br>
+                            <p class="small-text">Job Safety</p><br>
+                            <p class="small-text">Responsibility </p><br>
+                            <p class="small-text">Efficiency </p><br>
+                            <p class="small-text">Improvement </p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">Agile</p>
-                            <p class="small-text">Cross-functional teams</p>
+                            <p class="large-text">Agile</p><br>
+                            <p class="small-text">Coding</p><br>
+                            <p class="small-text">Planning</p><br>
+                            <p class="small-text">Testing</p><br>
+                            <p class="small-text">Debugging </p>
                         </div>
                     </div>
                 </div>
