--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     Node JS, React, digimarkkinointi, Tornio, ohjelmointi, software developer, devaaja, koodari, insinööri, tuotantotalous">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        </style>
     <title>Jarno Kiimala - Software Development • Industrial Engineering and Management</title>
 
     
@@ -117,6 +120,7 @@
                         <div class="abt-text">
                             <p class="large-text">Agile</p><br>
                             <p class="small-text">Coding</p><br>
+                            <p class="small-text">Design</p><br>
                             <p class="small-text">Planning</p><br>
                             <p class="small-text">Testing</p><br>
                             <p class="small-text">Debugging </p>
@@ -679,7 +683,7 @@
         <section class="container" id="blogs">
             <div class="blogs-content">
                 <div class="main-title">
-                    <h2><i class="fa-solid fa-person-digging"></i> <span>Xperience</span><span class="bg-text"></span></h2>
+                    <h2><i class="fa-solid fa-person-digging"></i>EX<span>perience</span><span class="bg-text"></span></h2>
                 </div>
 
                 <p class="port-text">
@@ -974,8 +978,7 @@
                         <h4>Get Connected!</h4>
                         <p>
                             <p style="color:var(--color-secondary)">• OPEN TO WORK •</p> Scan the QR Code to send me an email.
-                            I am willing to relocate.
-                            Hope to hear from you soon! References available upon request.<br>
+                            References available upon request.<br>
                         <br>
                         <div class="contact-info">
                             <div class="contact-item">
@@ -984,7 +987,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Finland • Willing to Relocate
+                                    Finland • willing to relocate
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -1045,7 +1048,7 @@
                     <div class="right-contact">
                         
                         <div class="roll-in-blurred-bottom">
-                        <div class="image">
+                        <div class="imagePhone">
                             <img src="img/scanqr.png" alt="Jarno Kiimala - Software Developer">
                         </div></div>
 
