--- a/index.html
+++ b/index.html
@@ -399,9 +399,9 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>React Course 2024 • STBA</h3>
+                        <h3>React Course 2024</h3>
                         <div class="icons">
-                            <a href="#" target="_blank" class="icon">
+                            <a href="https://jkiimala.github.io/reactCrashCourse2024/" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
