--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <p>
                      
                     I am experienced in carrying out international projects in multiprofessional environment. 
-                    I have worked in The United States, The Netherlands, Norway, Sweden & Finland in different business 
+                    I have worked in The United States, The Netherlands, Norway, Sweden & Finland in various business 
                     fields and I follow the zero tolerance policy for job safety. I am prepared for an open minded and responsible 
                     leadership role and I believe in continuous lifelong learning.<p>
 
@@ -387,7 +387,7 @@
                 <h2>C<i class="fa-solid fa-code"></i>DING <span>Projects</span><span class="bg-text"></span></h2>
             </div>
             <p class="port-text">
-                Use Google Chrome for best user experience.
+                Use Google Chrome for Best User Experience.
             </p>
 
             <div class="portfolios">
@@ -399,7 +399,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>React Course 2024</h3>
+                        <h3>Runs on local server</h3>
                         <div class="icons">
                             <a href="https://jkiimala.github.io/reactCrashCourse2024/" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
