--- a/index.html
+++ b/index.html
@@ -399,9 +399,9 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Runs on local server</h3>
+                        <h3>Run on localhost/server</h3>
                         <div class="icons">
-                            <a href="https://jkiimala.github.io/reactCrashCourse2024/" target="_blank" class="icon">
+                            <a href="https://github.com/jkiimala/traversyMediaReactCrashCourse2024" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
