--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
         <section class="container contact" id="contact">
             <div class="contact-container">
                 <div class="main-title">
-                    <h2>Contact <span><i class="fa fa-info-circle"></i></span><span class="bg-text"></span></h2>
+                    <h2>Contact <span><br><i class="fa fa-info-circle"></i></span><span class="bg-text"></span></h2>
                 </div>
                 <div class="contact-content-con">
                     <div class="left-contact">
