--- a/index.html
+++ b/index.html
@@ -662,13 +662,13 @@
 
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/rock.png" alt="">
+                        <img src="img/rock.png" alt="Jarno Kiimala - 2D animation - Rock Reindeer">
                     </div>
                     <div class="hover-items">
                         <h3>2D Animation</h3>
                         <div class="icons">
                             
-                            <a href="https://www.youtube.com/watch?v=iioU37yrGWo" target="_blank" class="icon">
+                            <a href="https://youtu.be/toli9WIr4kg" target="_blank" class="icon">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
