--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     I am experienced in carrying out international projects in multiprofessional environment. 
                     I have worked in The United States, The Netherlands, Norway, Sweden & Finland in various business 
                     fields and I follow the zero tolerance policy for job safety. I am prepared for an open minded and responsible 
-                    leadership role and I believe in continuous lifelong learning.<p>
+                    leadership role and I believe in lifelong learning-by-doing method.<p>
 
                     I am committed to continuous improvement principals and strive for quality and customer satisfaction.
                     Creating meaningful products and services attracts more customers and increases profits and long-term success.
