--- a/index.html
+++ b/index.html
@@ -1022,10 +1022,10 @@
                             <i class="fab fa-instagram"></i> 
                             </a> -->
 
-                            <!--
-                            <a href="https://www.linkedin.com/in/jarnokiimala/" target="_blank">
+                            
+                            <a href="https://www.linkedin.com/in/jkiimala/" target="_blank">
                                     <i class="fab fa-linkedin"></i>
-                            </a> -->
+                            </a>
 
                             <a href="https://github.com/jkiimala?tab=repositories" target="_blank">
                                 <i class="fab fa-github"></i>
