--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
                     <div class="left-contact">
                         <h4>Get Connected!</h4>
                         <p>
-                            <p style="color:var(--color-secondary)">• OPEN TO WORK •</p>
+                            <p style="color:var(--color-secondary)">OPEN TO WORK • READY FOR NEW CHALLENGES</p>
                             References available upon request.<br>
                         <br>
                         <div class="contact-info">
@@ -990,7 +990,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Oulu, Finland • willing to relocate
+                                    Finland • willing to relocate
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -1018,7 +1018,7 @@
                                     <span>Languages</span>
                                 </div>
                                 <p>
-                                    <span>Fin • Eng • Swe • Ger</span>
+                                    <span>Fin • Eng • Swe • Nor • Ger</span>
                                 </p>
                             </div>
                         </div>
