--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     
                 <p>
                     Front End Web Development •
-                    Digital Designs & Marketing • Problem Solving Content Creation • 3D Modeling • Media Production • Industrial Engineering & Management • Lean thinking
+                    Digital Designs & Marketing • Problem Solving Content Creation • 3D Modeling • Media Production • Industrial Engineering & Management • Lean thinking • Artificial Intelligence
                     
                 </p>
 
