--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <h5>Software Developer<span> - Esedu</span></h5>
                     <img src="img/esedu.png" alt="Esedu - Jarno Kiimala - Ohjelmistokehittäjä">
                     <p>
-                        HTML5, CSS3, Bootstrap 5, JavaScript, Canvas API, Visual Studio Code, Git/GitHub, AI
+                        HTML5, CSS3, Bootstrap 5, JavaScript, Canvas API, Visual Studio Code, Git/GitHub, AI.
                     </p>
                 </div>
 
@@ -304,7 +304,7 @@
                     <img src="img/unihki.png" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
                         Introduction to Programming course | Advanced Course
-                        in Programming | The Department of Computer Science
+                        in Programming | The Department of Computer Science.
                     </p>
                 </div>
 
@@ -328,7 +328,7 @@
                     <h5>My Cashflow e-Commerce Web Design & Administration<span> - Faktia Ltd</span></h5>
                     <img src="img/faktia.png" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
                     <p>
-                        MyCashflow e-Commerce Web Design, SEO and Administration
+                        MyCashflow e-Commerce Web Design, SEO and Administration.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -340,7 +340,7 @@
                     <img src="img/syo.png" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks">
                     <p>
                         Design & Product Development | 3D models and 2D drawings of complex parts and assemblies
-                        utilizing SolidWorks & Autodesk Inventor Pro
+                        utilizing SolidWorks & Autodesk Inventor Pro.
                     </p>
                 </div>
 
@@ -353,7 +353,7 @@
                     <img src="img/lappia.png" alt="Lappia-Education Ltd - Jarno Kiimala - Further Technical Education to Highly Qualified">
                     <p>
                         Continuing professional technical education to highly qualified individuals tailored
-                        to meet the needs of the Swedish and Norwegian labor markets
+                        to meet the needs of the Swedish and Norwegian labor markets.
                     </p>
                 </div>
 
@@ -366,7 +366,19 @@
                     <img src="img/lapinamk.png" alt="Lapland University of Applied Sciences - Jarno Kiimala - Industrial Management - Tuotantotalous">
                     <p>
                         Bachelor of Engineering (B.Eng). Subject of thesis: Marketing Research of Steel Abrasive Blast
-                        Room and Powder Coat Booth commissioned by Tornion KaMa-Palvelut Oy
+                        Room and Powder Coat Booth commissioned by Tornion KaMa-Palvelut Oy.
+                    </p>
+                </div>
+                
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2007 - 2008</p>
+                    <h5>Media Technology Engineer<span> - Centria University of Applied Sciences</span></h5>
+                    <img src="img/centria.png" alt="Centria University of Applied Sciences - Jarno Kiimala - Media Tech Engineering">
+                    <p>
+                        Media Technology & Engineering.
                     </p>
                 </div>
                 
@@ -376,10 +388,10 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2004 - 2006</p>
-                    <h5>Undergaduate Studies in Applied Physics<span> - University of Eastern Finland (UEF)</span></h5>
+                    <h5>Undergaduate in Applied Physics<span> - University of Eastern Finland (UEF)</span></h5>
                     <img src="img/uef.png" alt="University of Eastern Finland (UEF)">
                     <p>
-                        The Department of Applied Physics
+                        The Department of Applied Physics.
                     </p>
                 </div>
 
