--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2004 - 2006</p>
-                    <h5>Undergaduate in Applied Physics<span> - University of Eastern Finland (UEF)</span></h5>
+                    <h5>Undergraduate in Applied Physics<span> - University of Eastern Finland (UEF)</span></h5>
                     <img src="img/uef.png" alt="University of Eastern Finland (UEF)">
                     <p>
                         The Department of Applied Physics.
