--- a/index.html
+++ b/index.html
@@ -1022,6 +1022,30 @@
                         </div>
                     </div>
 
+                    <div class="blog">
+                        <img src="img/oulainen.png" alt="Jarno Kiimala - Oulainen">
+                        <div class="blog-text">
+                            <h4>
+                                The City of Oulainen
+                            </h4>
+                            <p>
+                                Oulainen, Finland
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/safety.png" alt="Jarno Kiimala - Occupational Safety Card">
+                        <div class="blog-text">
+                            <h4>
+                                Occupational Safety Card
+                            </h4>
+                            <p>
+                                The Centre for Occupational Safety
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
