--- a/index.html
+++ b/index.html
@@ -425,6 +425,11 @@
                     </div>
                 </div>
 
+
+                <audio id="deadmenSound">
+                    <source src="sounds/deadmen.wav" type="audio/wav">
+                </audio>
+
                 <div class="portfolio-item">
                     
                     <div class="image">
@@ -434,7 +439,7 @@
                     <div class="hover-items">
                         <h3>Slot Machine</h3>
                         <div class="icons">
-                            <a href="https://jkiimala.github.io/captainJackpot" target="_blank" class="icon">
+                            <a href="https://jkiimala.github.io/captainJackpot" id="deadmenSound" onclick="dead();" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
