--- a/index.html
+++ b/index.html
@@ -425,11 +425,12 @@
                     </div>
                 </div>
 
-
+                <!-- DEADMEN SOUND -->
                 <audio id="deadmenSound">
                     <source src="sounds/deadmen.wav" type="audio/wav">
                 </audio>
 
+                <!-- Capatin Jackpot -->
                 <div class="portfolio-item">
                     
                     <div class="image">
@@ -1047,6 +1048,18 @@
                             </h4>
                             <p>
                                 The Centre for Occupational Safety
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/road.png" alt="Jarno Kiimala - The Finnish Road Administration">
+                        <div class="blog-text">
+                            <h4>
+                                Roadwork Safety 1 Training
+                            </h4>
+                            <p>
+                                The Finnish Road Administration
                             </p>
                         </div>
                     </div>
