--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
             
             <div class="blogs-content">
                 <div class="main-title">
-                    <h2><i class="fa-solid fa-person-digging"></i>EX<span>perience</span><span class="bg-text"></span></h2>
+                    <h2><i class="fa-solid fa-person-digging"></i>EX<span>perience</span>+<span class="bg-text"></span></h2>
                 </div>
 
                 <p class="port-text">
@@ -1047,7 +1047,7 @@
                                 Occupational Safety Card
                             </h4>
                             <p>
-                                The Centre for Occupational Safety
+                                The Centre for Occupational Safety, VALID: 07/2027
                             </p>
                         </div>
                     </div>
@@ -1059,7 +1059,7 @@
                                 Roadwork Safety 1 Training
                             </h4>
                             <p>
-                                The Finnish Road Administration
+                                The Finnish Road Administration, VALID: 10/2027
                             </p>
                         </div>
                     </div>
