--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
 
                     <div class="blog">
                         
-                        <img src="img/sam.png" alt="Jarno Kiimala - USA">
+                        <img src="img/sam.webp" alt="Jarno Kiimala - USA">
                         <div class="blog-text">
                             <h4>
                                 The League of Finnish American Societies
