--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
                                 Occupational Safety Card
                             </h4>
                             <p>
-                                The Centre for Occupational Safety, VALID: 07/2027
+                                The Centre for Occupational Safety, VALID:07/2027
                             </p>
                         </div>
                     </div>
@@ -1059,7 +1059,19 @@
                                 Roadwork Safety 1 Training
                             </h4>
                             <p>
-                                The Finnish Road Administration, VALID: 10/2027
+                                The Finnish Road Administration, VALID:10/2027
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/road2.webp" alt="Jarno Kiimala - The Finnish Road Administration">
+                        <div class="blog-text">
+                            <h4>
+                                Roadwork Safety 2 Training
+                            </h4>
+                            <p>
+                                The Finnish Road Administration, VALID:05/2029
                             </p>
                         </div>
                     </div>
