--- a/index.html
+++ b/index.html
@@ -824,6 +824,19 @@
 
                     <div class="blog">
                         
+                        <img src="img/arc.webp" alt="Jarno Kiimala - Arktista Vimmaa Festivaali">
+                        <div class="blog-text">
+                            <h4>
+                                <a>Arctic Design Week</a>
+                            </h4>
+                            <p>
+                                Rovaniemi, Finland
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        
                         <img src="img/skabmagovat.webp" alt="Jarno Kiimala - Skabmagovat">
                         <div class="blog-text">
                             <h4>
