--- a/index.html
+++ b/index.html
@@ -425,12 +425,12 @@
                     </div>
                 </div>
 
-                <!-- DEADMEN SOUND -->
+                <!-- DEADMEN SOUND 
                 <audio id="deadmenSound">
                     <source src="sounds/deadmen.wav" type="audio/wav">
-                </audio>
+                </audio> -->
 
-                <!-- Capatin Jackpot -->
+                <!-- Captain Jackpot -->
                 <div class="portfolio-item">
                     
                     <div class="image">
