--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
                     <h5>3D Modeling Online Course<span> - The Finnish Institute for Enterprise Management</span></h5>
                     <img src="img/syo.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks">
                     <p>
-                        Design & Product Development | 3D models and 2D drawings of complex parts and assemblies
-                        utilizing SolidWorks & Autodesk Inventor Pro.
+                        Design & Product Development | 3D models and 2D drawings of Complex Parts and Assemblies
+                        Utilizing SolidWorks & Autodesk Inventor Pro.
                     </p>
                 </div>
 
@@ -352,8 +352,8 @@
                     <h5>Further Technical Education to Highly Qualified<span> - Lappia-Education Ltd</span></h5>
                     <img src="img/lappia.webp" alt="Lappia-Education Ltd - Jarno Kiimala - Further Technical Education to Highly Qualified">
                     <p>
-                        Continuing professional technical education to highly qualified individuals tailored
-                        to meet the needs of the Swedish and Norwegian labor markets.
+                        Continuing Professional Technical Education to Highly Qualified Individuals Tailored
+                        to Meet the Needs of the Swedish and Norwegian Labor Markets.
                     </p>
                 </div>
 
@@ -370,6 +370,7 @@
                     </p>
                 </div>
                 
+                <!--
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
@@ -393,7 +394,7 @@
                     <p>
                         The Department of Applied Physics.
                     </p>
-                </div>
+                </div> -->
 
             </div>
         </section>
