--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
                     <h5>Python Coding<span> - Uni Helsinki</span></h5>
                     <img src="img/unihki.webp" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
-                        Introduction to Programming course | Advanced Course
-                        in Programming | The Department of Computer Science.
+                        Introduction to Python Programming + Advanced Course
+                        in Python Programming | The Department of Computer Science.
                     </p>
                 </div>
 
