--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Tornio, Finland • willing to relocate
+                                    Finland • willing to relocate
                                 </p>
                             </div>
                             <div class="contact-item">
