--- a/index.html
+++ b/index.html
@@ -1040,13 +1040,13 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/oulainen.webp" alt="Jarno Kiimala - Oulainen">
+                        <img src="img/mmt.webp" alt="Jarno Kiimala - Muutosmuotoilutoimisto">
                         <div class="blog-text">
                             <h4>
-                                The City of Oulainen
+                                Muutosmuotoilutoimisto
                             </h4>
                             <p>
-                                Oulainen, Finland
+                                Global Online
                             </p>
                         </div>
                     </div>
