--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Finland • willing to relocate
+                                    Finland, EU Citizen • willing to relocate
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -1221,12 +1221,22 @@
         </div>
         <div class="control" data-id="contact">
             <i class='far fa-address-card'></i>
-        </div>     
+        </div>         
     </div>
-    
-        <div class="theme-btn">
-            <i class="fas fa-paint-brush"></i>
+
+    <!-- CONTACT + OTHER SOUNDS -->
+    <!-- <audio id="home-sound" src="sounds/home.mp3"></audio> -->
+    <audio id="about-sound" src="sounds/about.mp3"></audio>
+    <audio id="portfolio-sound" src="sounds/portfolio.mp3"></audio>
+    <audio id="blogs-sound" src="sounds/blogs.mp3"></audio>
+
+    <audio id="contact-sound" src="sounds/whazzup.mp3" controls></audio>
+
+    <!-- COLOR CHANGE BUTTON -->
+    <div class="theme-btn">
+        <i class="fas fa-paint-brush"></i>
     </div>
+
     <script src="app.js"></script>
 
     <!-- Bootstrap JavaScript Libraries -->
