--- a/index.html
+++ b/index.html
@@ -1207,7 +1207,7 @@
 
     <div class="controls">
         <div class="control active-btn" data-id="home" >
-            <i class="fa-solid fa-house-chimney"></i>
+            <i class="fa-solid fa-house"></i>
         </div>
         <div class="control" data-id="about">
             <i class="fa-solid fa-user-graduate"></i>
