--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/jarnokiimala4.webp" alt="Jarno Kiimala - Software Developer">
+                    <img src="img/jarnokiimalaportfolio.webp" alt="Jarno Kiimala - Software Developer">
                 </div>
             </div>
             <div class="right-header">
@@ -76,7 +76,7 @@
 
                     I am committed to continuous improvement principals and strive for quality and customer satisfaction.
                     Creating meaningful products and services attracts more customers and increases profits and long-term success.
-                    My recent accomplishments are Python coding, JavaScript, Bootstrap 5 and Knowledge Management.</p>
+                    My recent accomplishments are Python coding, JavaScript, Bootstrap 5, Tailwind CSS, React and Knowledge Management.</p>
                     
                     <!--
                     <div class="btn-con">
@@ -188,7 +188,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">React</p>
                         <div class="progress-con">
-                            <p class="prog-text">25%</p>
+                            <p class="prog-text">35%</p>
                             <div class="progress">
                                 <span class="new"></span>
                             </div>
@@ -266,6 +266,26 @@
                         </div>
                     </div>
 
+                    <div class="progress-bar">
+                        <p class="prog-title">Tailwind CSS</p>
+                        <div class="progress-con">
+                            <p class="prog-text">85%</p>
+                            <div class="progress">
+                                <span class="react"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="progress-bar">
+                        <p class="prog-title">ChatGPT</p>
+                        <div class="progress-con">
+                            <p class="prog-text">85%</p>
+                            <div class="progress">
+                                <span class="react"></span>
+                            </div>
+                        </div>
+                    </div>
+
                                         
                 </div>
             </div>
@@ -318,7 +338,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2021</p>
-                    <h5>e-Commerce Design & Administration<span> - Faktia Ltd</span></h5>
+                    <h5>e-Commerce Design & Admin<span> - Faktia Ltd</span></h5>
                     <img src="img/faktia.webp" alt="Faktia Ltd - Jarno Kiimala - MyCashflow">
                     <p>
                         MyCashflow e-Commerce Web Design, SEO and Administration.
