--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2018</p>
-                    <h5>3D Modeling Online Course<span> - SYO.FI </span></h5>
+                    <h5>3D Modeling Online Course<span> - The Finnish Institute for Enterprise Management </span></h5>
                     <img src="img/syo.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks">
                     <p>
                         Design & Product Development | 3D models and 2D drawings of Complex Parts and Assemblies
@@ -434,7 +434,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>React App - STBA</h3>
+                        <h3>React Portfolio Website - STBA</h3>
                         <div class="icons">
                            <!-- <a href="#" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a> -->
