--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     
                     <span class="wrap"></span>
                     <h2> <a class="typewrite" data-period="2000" 
-                        data-type='[ "I am Creative...", "I am Innovative...", "I ❤ Digital Media...", "and Web Development." ]'>
+                        data-type='[ "I gotta black cat bone...", "I gotta mojo too...", "I am your hoochie coochie man...", "Everybody knows I am." ]'>
                           
                         </a>
                     </h2>
