--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2018</p>
-                    <h5>3D Modeling Online Course<span> - The Finnish Institute for Enterprise Management </span></h5>
+                    <h5>3D Modeling Online Course<span> - SYO LTD </span></h5>
                     <img src="img/syo.webp" alt="The Finnish Institute for Enterprise Management - Jarno Kiimala - SolidWorks">
                     <p>
                         Design & Product Development | 3D models and 2D drawings of Complex Parts and Assemblies
