--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                     fields. I am prepared for an open minded and responsible 
                     leadership role and I believe in lifelong learning-by-doing method.<p>
 
+                    I am committed to continuous improvement principals and strive for quality and customer satisfaction.
+                    Creating meaningful products and services attracts more customers and increases profits and long-term success.
                     My recent accomplishments are Python coding, JavaScript, Bootstrap 5, Tailwind CSS, React.js and Knowledge Management.</p>
                     
                     <!--
