--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     
                     <span class="wrap"></span>
                     <h2> <a class="typewrite" data-period="2000" 
-                        data-type='[ "Creative Solutions...", "Remote Projects...", "e-Commerce & Web Design...", "Lean Thinking." ]'>
+                        data-type='[ "Creative Solutions...", "Remote Projects...", "e-Commerce & Web Design...", "Lean Thinking..." ]'>
                           
                         </a>
                     </h2>
