--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     
                     <span class="wrap"></span>
                     <h2> <a class="typewrite" data-period="2000" 
-                        data-type='[ "Creative Solutions...", "Innovative Attitude...", "Web Development...", "Content Creation..." ]'>
+                        data-type='[ "Creative Solutions.", "Innovative Attitude.", "Networking.", "Adaptability." ]'>
                           
                         </a>
                     </h2>
