--- a/index.html
+++ b/index.html
@@ -438,10 +438,10 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>React Portfolio Website - STBA</h3>
+                        <h3>Simple Portfolio Website</h3>
                         <div class="icons">
-                           <!-- <a href="#" target="_blank" class="icon">
-                                <i class="fab fa-github"></i></a> -->
+                            <a href="https://jkiimala.github.io/reactWeb/" target="_blank" class="icon">
+                                <i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
