--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Simple Portfolio Website</h3>
+                        <h3>Simple React Website</h3>
                         <div class="icons">
                             <a href="https://jkiimala.github.io/reactWeb/" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
