--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     
                     <span class="wrap"></span>
                     <h2> <a class="typewrite" data-period="2000" 
-                        data-type='[ "Creative Solutions.", "Innovative Attitude.", "Networking.", "Adaptability." ]'>
+                        data-type='[ "Creative Solutions.", "Innovative Attitude.", "Data Acquisition.", "Lean Thinking." ]'>
                           
                         </a>
                     </h2>
@@ -190,7 +190,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">React</p>
                         <div class="progress-con">
-                            <p class="prog-text">35%</p>
+                            <p class="prog-text">40%</p>
                             <div class="progress">
                                 <span class="new"></span>
                             </div>
