--- a/index.html
+++ b/index.html
@@ -435,10 +435,10 @@
                     </div>
                     <div class="hover-items">
                         <h3>React Native | Soon...</h3>
-                        <div class="icons">
-                            <a href="#" target="_blank" class="icon">
+                        <!-- <div class="icons">
+                            <a href="" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
@@ -497,7 +497,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio-item">
+                <!-- <div class="portfolio-item">
                     
                     <div class="image">
                         <img src="img/kahvilatutka.webp" alt="kahvilatutka.fi - Jarno Kiimala">
@@ -510,7 +510,7 @@
                                 <i class="fab fa-github"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="portfolio-item">
                     
@@ -534,7 +534,7 @@
 
                     </div>
                     <div class="hover-items">
-                        <h3>Team Project - Game</h3>
+                        <h3>Canvas API</h3>
                         <div class="icons">
                             <a href="https://jkiimala.github.io/spaceWorms" target="_blank" class="icon">
                                 <i class="fab fa-github"></i></a>
